--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,9 @@
     "gapi-script": "^1.2.0",
     "jwt-decode": "^3.1.2",
     "react": "^18.1.0",
+    "react-chat-elements": "^12.0.0",
     "react-dom": "^18.1.0",
+    "react-draggable": "^4.4.5",
     "react-google-button": "^0.7.2",
     "react-google-login": "^5.2.2",
     "react-google-one-tap-login": "^0.1.1",
