--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^6.3.6",
     "gapi-script": "^1.2.0",
     "jwt-decode": "^3.1.2",
+    "material-ui-search-bar": "^1.0.0",
     "react": "^18.1.0",
     "react-chat-elements": "^12.0.0",
     "react-dom": "^18.1.0",
